namespace CrisisConnect.Domain.Enums;

public enum NiveauBadge
{
    Vert,
    Orange,
    Rouge
}
