namespace CrisisConnect.Domain.Enums;

public enum PorteeMandat
{
    ToutesOperations,
    LectureSeule,
    CategorieSpecifique
}
