namespace CrisisConnect.Domain.Enums;

public enum StatutRole
{
    Actif,
    Expire,
    Suspendu
}
