namespace CrisisConnect.Domain.Enums;

public enum TypeRole
{
    Contributeur,
    Utilisateur,
    AdminInstalleur,
    AdminCatastrophe,
    AdminSysteme
}
